fix: IllegalAccessError on Java 16